Anothe form fix

--- a/public/forms.html
+++ b/public/forms.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <!-- Homepage Form -->
-    <form name="homepage-contact" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+    <form name="homepage-contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you/">
         <input type="hidden" name="form-name" value="homepage-contact" />
         <div>
             <label>Jméno: <input type="text" name="name" /></label>
@@ -26,7 +26,7 @@
     </form>
 
     <!-- Kontakt Page Form -->
-    <form name="kontakt-stranka-form" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+    <form name="kontakt-stranka-form" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you/">
         <input type="hidden" name="form-name" value="kontakt-stranka-form" />
         <div>
             <label>Jméno: <input type="text" name="name" /></label>
