--- a/public/forms.html
+++ b/public/forms.html
@@ -3,8 +3,8 @@
 <head><title>Netlify Form Definitions</title></head>
 <body>
   <!-- Homepage Form (from src/pages/index.astro) -->
-  <form name="homepage-contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you/">
-    <input type="hidden" name="form-name" value="homepage-contact" />
+  <form name="contact-index-v2" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you/">
+    <input type="hidden" name="form-name" value="contact-index-v2" />
     <p class="hidden" style="display:none;">
       <label>
         Don't fill this out if you're human: <input name="bot-field" />
@@ -28,8 +28,8 @@
   </form>
 
   <!-- Kontakt Page Form (from src/pages/kontakt.astro) -->
-  <form name="kontakt-stranka-form" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you/">
-    <input type="hidden" name="form-name" value="kontakt-stranka-form" />
+  <form name="contact-kontaktpage-v2" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you/">
+    <input type="hidden" name="form-name" value="contact-kontaktpage-v2" />
     <p class="hidden" style="display:none;">
       <label>
         Don't fill this out if you're human: <input name="bot-field" />
