yet another form fix, test

--- a/public/forms.html
+++ b/public/forms.html
@@ -11,6 +11,9 @@
       </label>
     </p>
     <div>
+      <label>Netlify Test Field: <input type="text" name="netlify-test-field" value="TestValue123" /></label>
+    </div>
+    <div>
       <label>Jméno: <input type="text" name="name" required /></label>
     </div>
     <div>
