another form fix

--- a/public/forms.html
+++ b/public/forms.html
@@ -3,7 +3,7 @@
 <head><title>Netlify Form Definitions</title></head>
 <body>
   <!-- Homepage Form (from src/pages/index.astro) -->
-  <form name="contact-index-v2" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you/">
+  <form name="contact-index-v2" method="POST" data-netlify="true" netlify-honeypot="bot-field">
     <input type="hidden" name="form-name" value="contact-index-v2" />
     <p class="hidden" style="display:none;">
       <label>
@@ -31,7 +31,7 @@
   </form>
 
   <!-- Kontakt Page Form (from src/pages/kontakt.astro) -->
-  <form name="contact-kontaktpage-v2" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you/">
+  <form name="contact-kontaktpage-v2" method="POST" data-netlify="true" netlify-honeypot="bot-field">
     <input type="hidden" name="form-name" value="contact-kontaktpage-v2" />
     <p class="hidden" style="display:none;">
       <label>
